--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -185,3 +185,12 @@ div.field, div.actions {
   font-size: 12px;
   list-style: square;
 }
+
+/*user -> index.html.erb*/
+ul.users {
+  margin-top: 1em;
+}
+
+.users li {
+  list-style: none;
+}
